--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
 
-    <meta charset="UTF-8">
-    <title>Exceptional Realty Group - Luxury Homes - About</title>
-  </head>
-  <body>
+<head>
 
-    <h1>Exceptional</h1>
-    <h2>Realty Group</h2>
+  <meta charset="UTF-8">
+  <title>Exceptional Realty Group - Luxury Homes - About</title>
+</head>
 
-    <!-- your code here! See README.md for deliverables -->
+<body>
 
-  </body>
+  <h1>Exceptional</h1>
+  <h2>Realty Group</h2>
+
+  <!-- your code here! See README.md for deliverables -->
+  <video autoplay controls width="600px" height="400px">
+    <source src="https://s3.amazonaws.com/ironboard-learn/cat_video.mp4" type="video/mp4">
+    <source src="https://s3.amazonaws.com/ironboard-learn/cat_video.ogg" type="video/ogg">
+    Your browser does not support HTML5 video <a href="https://browsehappy.com/" target="_blank">Please upgrade your
+      browser</a>
+  </video>
+</body>
+
 </html>
